If scrollbar needed, make popup widget display it instead of popup wrapper. Partially reverts 4d1ddb9738c5a9af31092562211d8f0d4bec202c. Fixes #266.

--- a/themes/common/classes.less
+++ b/themes/common/classes.less
@@ -50,9 +50,19 @@
 	margin: 0;
 	border: 0;
 	padding: 0;
-	-webkit-overflow-scrolling: touch;
 	.box-shadow(0 1px 5px rgba(0,0,0,0.25));
 	.box-sizing(border-box);
+}
+
+// And then the popup itself gets this styling
+.d-popup > * {
+	// we set the height and width on the wrapper, so the popup widget itself just needs to follow our lead
+	.box-sizing(border-box);
+	height: inherit;
+	width: inherit;
+
+	// and it needs to show a scrollbar if necessary
+	overflow: auto;
 }
 
 .d-tooltip-dialog-popup {
